ELD3: Fix high contrast color

--- a/EnglishLearners3/dev/assets/css/main-highcontrast.css
+++ b/EnglishLearners3/dev/assets/css/main-highcontrast.css
@@ -4829,7 +4829,7 @@ button:hover,
 }
 
 .bar-chart .bar.highlighted {
-  fill: #A6426C;
+  fill: #5D42A6;
 }
 
 .bar {
